feat(2134): test cases modified