@@ -9,9 +9,12 @@
 package com.soprasteria.g4it.backend.apireferential.business;
 
 import com.soprasteria.g4it.backend.apireferential.mapper.ReferentialMapper;
+import com.soprasteria.g4it.backend.apireferential.modeldb.Criterion;
 import com.soprasteria.g4it.backend.apireferential.persistence.ReferentialPersistenceService;
 import com.soprasteria.g4it.backend.exception.BadRequestException;
 import com.soprasteria.g4it.backend.server.gen.api.dto.*;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Path;
 import jakarta.validation.Validator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -52,7 +55,6 @@ class ReferentialImportServiceTest {
 
     @BeforeEach
     void setUp() {
-        referentialImportService = new ReferentialImportService();
         referentialImportService.referentialMapper = referentialMapper;
         referentialImportService.persistenceService = persistenceService;
         referentialImportService.validator = validator;
@@ -83,7 +85,6 @@ class ReferentialImportServiceTest {
         BadRequestException ex = assertThrows(BadRequestException.class, () ->
                 referentialImportService.importReferentialCSV("invalidType", file, "org")
         );
-        assertNotNull(ex.getError(), "type of referential 'invalidType' does not exist");
         assertTrue(ex.getError().contains("type of referential"));
     }
 
@@ -91,12 +92,13 @@ class ReferentialImportServiceTest {
     void testProcessCriterionCsv_Valid() throws IOException {
         String csv = "header1,header2\nval1,val2\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         when(referentialMapper.csvCriterionToRest(any())).thenReturn(new CriterionRest());
         when(validator.validate(any())).thenReturn(Collections.emptySet());
         when(persistenceService.saveCriteria(any())).thenReturn(1);
-        when(referentialMapper.toCriteriaEntity(any())).thenReturn(Collections.emptyList());
+        when(referentialMapper.toCriteriaEntity(any()))
+                .thenReturn(List.of(new Criterion()));
         when(cacheManager.getCache(anyString())).thenReturn(cache);
         ImportReportRest report = referentialImportService.processCriterionCsv(file);
         assertEquals("test.csv", report.getFile());
@@ -107,37 +109,48 @@ class ReferentialImportServiceTest {
     @Test
     void testProcessCriterionCsv_InvalidCsv_AddsError() throws IOException {
         String csv = "header1,header2\nval1,val2\n";
-        InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+
+        when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
-        when(referentialMapper.csvCriterionToRest(any())).thenReturn(new CriterionRest());
-        @SuppressWarnings("unchecked")
-        jakarta.validation.ConstraintViolation<CriterionRest> violation = mock(jakarta.validation.ConstraintViolation.class);
-        jakarta.validation.Path path = mock(jakarta.validation.Path.class);
+
+        when(referentialMapper.csvCriterionToRest(any()))
+                .thenReturn(new CriterionRest());
+
+        ConstraintViolation<CriterionRest> violation = mock(ConstraintViolation.class);
+        Path path = mock(Path.class);
+
         when(path.toString()).thenReturn("field");
         when(violation.getMessage()).thenReturn("error");
         when(violation.getPropertyPath()).thenReturn(path);
-        Set<jakarta.validation.ConstraintViolation<CriterionRest>> violations = new HashSet<>();
+
+        Set<ConstraintViolation<CriterionRest>> violations = new HashSet<>();
         violations.add(violation);
-        when(validator.validate(any())).thenReturn((Set)violations); // Fix generics issue
-        when(cacheManager.getCache("ref_getAllCriteria")).thenReturn(cache); // Fix NPE
+
+        when(validator.validate(any(CriterionRest.class)))
+                .thenReturn((Set) violations);
+
+        when(cacheManager.getCache(anyString())).thenReturn(cache);
+
         ImportReportRest report = referentialImportService.processCriterionCsv(file);
+
         assertFalse(report.getErrors().isEmpty());
     }
 
     @Test
     void testProcessCriterionCsv_IOException_AddsError() throws IOException {
-        when(file.getInputStream()).thenThrow(new IOException("fail"));
+        when(file.getBytes()).thenThrow(new IOException("fail"));
         when(file.getOriginalFilename()).thenReturn("test.csv");
+
         ImportReportRest report = referentialImportService.processCriterionCsv(file);
-        assertFalse(report.getErrors().isEmpty()); // Improved assertion
+
+        assertFalse(report.getErrors().isEmpty());
     }
 
     @Test
     void testProcessLifecycleStepCsv_Valid() throws IOException {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         when(referentialMapper.csvLifecycleStepToRest(any())).thenReturn(new LifecycleStepRest());
         when(validator.validate(any())).thenReturn(Collections.emptySet());
@@ -152,7 +165,7 @@ class ReferentialImportServiceTest {
     void testProcessHypothesisCsv_OrganizationMismatch_ThrowsBadRequest() throws IOException {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         HypothesisRest rest = mock(HypothesisRest.class);
         when(rest.getOrganization()).thenReturn("otherOrg");
@@ -167,7 +180,7 @@ class ReferentialImportServiceTest {
     void testProcessItemTypeCsv_OrganizationMismatch_ThrowsBadRequest() throws IOException {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         ItemTypeRest rest = mock(ItemTypeRest.class);
         when(rest.getOrganization()).thenReturn("otherOrg");
@@ -182,7 +195,7 @@ class ReferentialImportServiceTest {
     void testProcessMatchingItemCsv_OrganizationMismatch_ThrowsBadRequest() throws IOException {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         MatchingItemRest rest = mock(MatchingItemRest.class);
         when(rest.getOrganization()).thenReturn("otherOrg");
@@ -197,7 +210,7 @@ class ReferentialImportServiceTest {
     void testProcessItemImpactCsv_SubscriberMismatch_ThrowsBadRequest() throws IOException {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
         ItemImpactRest rest = mock(ItemImpactRest.class);
         when(rest.getOrganization()).thenReturn("otherOrg");
@@ -210,22 +223,24 @@ class ReferentialImportServiceTest {
     @Test
     void testProcessItemImpactCsv_Valid() throws IOException {
         String csv = "subscriber,field1\norg,val1\norg,val2\n";
-        InputStream is = new ByteArrayInputStream(csv.getBytes());
-        when(file.getInputStream()).thenReturn(is);
+
+        when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
-        // Always return a mock with organization 'org' for any CSV record
-        when(referentialMapper.csvItemImpactToRest(any())).thenAnswer(invocation -> {
-            ItemImpactRest rest = mock(ItemImpactRest.class);
-            when(rest.getOrganization()).thenReturn("org");
-            return rest;
-        });
-        when(referentialMapper.toItemImpactEntity(any())).thenReturn(Collections.emptyList());
-        doNothing().when(persistenceService).deleteItemImpactsByOrganization(any());
-        doNothing().when(persistenceService).saveItemImpacts(any());
+
+        when(referentialMapper.csvItemImpactToRest(any()))
+                .thenAnswer(invocation -> {
+                    ItemImpactRest rest = new ItemImpactRest();
+                    rest.setOrganization("org");
+                    return rest;
+                });
+
         when(cacheManager.getCache("ref_getItemImpacts")).thenReturn(cache);
         when(cacheManager.getCache("ref_getCountries")).thenReturn(cache);
         doNothing().when(cache).clear();
-        ImportReportRest report = referentialImportService.processItemImpactCsv(file, "org");
+
+        ImportReportRest report =
+                referentialImportService.processItemImpactCsv(file, "org");
+
         assertEquals("test.csv", report.getFile());
         assertTrue(report.getErrors().isEmpty());
         assertNotNull(report.getImportedLineNumber());
@@ -236,7 +251,7 @@ class ReferentialImportServiceTest {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         HypothesisRest rest = mock(HypothesisRest.class);
@@ -259,7 +274,7 @@ class ReferentialImportServiceTest {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         ItemTypeRest rest = mock(ItemTypeRest.class);
@@ -282,7 +297,7 @@ class ReferentialImportServiceTest {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         MatchingItemRest rest = mock(MatchingItemRest.class);
@@ -305,7 +320,7 @@ class ReferentialImportServiceTest {
         String csv = "header1\nval1\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         when(referentialMapper.csvLifecycleStepToRest(any())).thenReturn(new LifecycleStepRest());
@@ -317,10 +332,11 @@ class ReferentialImportServiceTest {
         when(violation.getMessage()).thenReturn("error");
         when(violation.getPropertyPath()).thenReturn(path);
 
-        Set violations = new HashSet();
+        Set<jakarta.validation.ConstraintViolation<LifecycleStepRest>> violations = new HashSet<>();
         violations.add(violation);
 
-        when(validator.validate(any())).thenReturn(violations);
+        when(validator.validate(any()))
+                .thenReturn((Set) violations);
         when(cacheManager.getCache(anyString())).thenReturn(cache);
 
         ImportReportRest report = referentialImportService.processLifecycleStepCsv(file);
@@ -330,7 +346,7 @@ class ReferentialImportServiceTest {
 
     @Test
     void testProcessHypothesisCsv_IOException() throws IOException {
-        when(file.getInputStream()).thenThrow(new IOException("fail"));
+        when(file.getBytes()).thenThrow(new IOException("fail"));
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         ImportReportRest report = referentialImportService.processHypothesisCsv(file, "org");
@@ -345,16 +361,15 @@ class ReferentialImportServiceTest {
         c;l;n;cat;1;desc;loc;lev;src;t;u;10;1
         """;
 
-        InputStream is = new ByteArrayInputStream(csv.getBytes());
-
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("file.csv");
 
-        when(referentialMapper.csvItemImpactToRest(any())).thenAnswer(invocation -> {
-            ItemImpactRest rest = mock(ItemImpactRest.class);
-            when(rest.getOrganization()).thenReturn("org");
-            return rest;
-        });
+        when(referentialMapper.csvItemImpactToRest(any()))
+                .thenAnswer(invocation -> {
+                    ItemImpactRest rest = new ItemImpactRest();
+                    rest.setOrganization("org");
+                    return rest;
+                });
 
         when(cacheManager.getCache(anyString())).thenReturn(cache);
 
@@ -374,7 +389,7 @@ t;c;com;1;true;s;ref;1
 
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         ItemTypeRest rest = new ItemTypeRest();
@@ -394,7 +409,7 @@ t;c;com;1;true;s;ref;1
         String csv = "wrong,header\nval1,val2\n";
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
 
         assertThrows(BadRequestException.class, () ->
                 referentialImportService.parseItemTypeCsv(file)
@@ -410,7 +425,7 @@ t;c;com;1;true;s;ref;1
 
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         MatchingItemRest rest = new MatchingItemRest();
@@ -433,7 +448,7 @@ t;c;com;1;true;s;ref;1
 
         InputStream is = new ByteArrayInputStream(csv.getBytes());
 
-        when(file.getInputStream()).thenReturn(is);
+         when(file.getBytes()).thenReturn(csv.getBytes());
         when(file.getOriginalFilename()).thenReturn("test.csv");
 
         ItemImpactRest rest = new ItemImpactRest();
@@ -447,5 +462,4 @@ t;c;com;1;true;s;ref;1
         assertTrue(result.getReport().getErrors().isEmpty());
     }
 
-    // Additional tests for error/edge cases can be added similarly
 }
